SIP-10166: Set a min height on analyze chooser to avoid jumping

--- a/sip-web/src/app/modules/analyze/view/new-dialog/analyze-new-dialog.component.scss
+++ b/sip-web/src/app/modules/analyze/view/new-dialog/analyze-new-dialog.component.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   width: 700px;
+  min-height: 712px;
   height: auto;
   max-height: 90vh;
 }
